examples/test/testpolicy4191.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4191
  namespace: namespace322
spec:
  podSelector:
    matchLabels:
      key44: value27
      key38: value48
      key5: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value29
          key35: value42
          key21: value47
      podSelector:
        matchLabels:
          key32: value17
          key23: value22
          key4: value23
